# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "shell-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.68"                                                              # error handling
bytes = "1.3.0"                                                                # helps manage buffers
crossterm = { version = "0.28.1", features = ["event-stream", "events"] }
thiserror = "1.0.38"                                                           # error handling
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
